--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
             const childAge = document.getElementById('childAge').value;
             const childGender = document.getElementById('childGender').value;
 
-            const printWindow = window.open('', '_blank');
+            const printWindow = window.open('', '_2560005@ritindia.edu');
             printWindow.document.write(`
                 <!DOCTYPE html>
                 <html>
@@ -1700,3 +1700,4 @@
     </script>
 </body>
 </html>
+
